# Haskell

./: .gitignore  README.md
Exam/variant1task1/: ChangeLog.md  README.md  package.yaml  variant1task1.cabal
Exam/variant1task1/src/: Lib.hs
Exam/variant1task2/: ChangeLog.md  README.md  package.yaml  variant1task2.cabal
Exam/variant1task2/src/: Lib.hs
Lab1/: Lab1.cabal  sport_on_faculty_database_init.sql
Lab1/app/: Main.hs
Lab1/src/: Create.hs  Delete.hs  FindById.hs  ListAll.hs  Update.hs  Utils.hs
Lab2/: Lab2.cabal
Lab2/app/: Main.hs  Main_threaded.hs
Lab2/src/: Lib.hs  Lib_threaded.hs  SparseGraph.hs
Lab2/test/: Unit.hs  Unit_threaded.hs
Tasks/Task1/app/: Main.hs
Tasks/Task1/src/: Lib.hs
