cabal-version:  1.12
name:           Lab1
version:        0.1.0.0
build-type:     Simple

library
  exposed-modules:
      Create
      Delete
      FindById
      ListAll
      Update
      Utils
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , mysql-haskell
    , time
    , text-conversions
    , io-streams
    , binary
  default-language: Haskell2010

executable Lab1-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      Lab1
    , base >=4.7 && <5
    , mysql-haskell
  default-language: Haskell2010

test-suite Lab1-test
  type: exitcode-stdio-1.0
  main-is: Unit.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      Lab1
    , base >=4.7 && <5
    , time
    , mysql-haskell
    , HUnit
  default-language: Haskell2010

