cabal-version: 1.12
name:           Lab2
version:        0.1.0.0
build-type:     Simple

library
  exposed-modules:
      Lib
      Lib_threaded
      SparseGraph
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , containers
    , random
    , array
    , monad-par
  default-language: Haskell2010

executable Lab2-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      Lab2
    , base >=4.7 && <5
  default-language: Haskell2010

executable Lab2-threaded-exe
  main-is: Main_threaded.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      Lab2
    , base >=4.7 && <5
  default-language: Haskell2010

test-suite Lab2-test
  type: exitcode-stdio-1.0
  main-is: Unit.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      Lab2
    , base >=4.7 && <5
    , HUnit
  default-language: Haskell2010

test-suite Lab2-threaded-test
  type: exitcode-stdio-1.0
  main-is: Unit_threaded.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      Lab2
    , base >=4.7 && <5
    , HUnit
  default-language: Haskell2010
